fix z-indexes

--- a/src/components/molecules/AdminVenueCard/AdminVenueCard.scss
+++ b/src/components/molecules/AdminVenueCard/AdminVenueCard.scss
@@ -5,7 +5,6 @@ $primary: #6f43ff;
 .admin-venue-card {
   position: relative;
   overflow: hidden;
-  z-index: z(admin-venue-card);
   display: flex;
   justify-content: flex-end;
   flex-direction: column;
@@ -33,7 +32,7 @@ $primary: #6f43ff;
       background-image: linear-gradient(
         180deg,
         rgba(25, 24, 26, 0.6) 0%,
-        $saturated-black: 100%
+        $saturated-black 100%
       );
     }
 
@@ -41,7 +40,7 @@ $primary: #6f43ff;
       background-image: linear-gradient(
         180deg,
         rgba(38, 36, 39, 0.6) 0%,
-        $saturated-black-alt: 100%
+        $saturated-black-alt 100%
       );
     }
   }
