--- a/src/scss/constants.scss
+++ b/src/scss/constants.scss
@@ -57,7 +57,6 @@ $z-layer-live-schedule: 20;
 $z-layer-sidebar: 15;
 $z-layers: (
   // Admin
-  admin-venue-card: 1,
   admin-venue-card-bg: -1,
   admin-navbar: 100,
   admin-placement: 10,
